# mobile-manipulator

./: README.md
hand_controlled_robot_arm/: CMakeLists.txt  package.xml
hand_controlled_robot_arm/launch/: robot_arm.launch
hand_controlled_robot_arm/src/: auto_pickplace.py  gripper_cmd_serial_bridge.py  hand_controlled_robot_arm.py  key_target.py  opencr_test.py  target_switch.py  test_hand.py  upgrade_hand copy.py  upgrade_hand.py
manipulator_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
manipulator_description/meshes/: base_link.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl  link5_1.stl
manipulator_description/urdf/: ikfast61_manipulator.cpp  manipulator.gazebo  manipulator.trans  manipulator.xacro
manipulator_mobile_description/: CMakeLists.txt  package.xml
manipulator_mobile_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  rtabmap_myrobot.launch  urdf.rviz
manipulator_mobile_description/meshes/: D435i_manipulator_1.stl  base_link.stl  camara_braket_v1_1.stl  camera_link_1.stl  (+21 more)
manipulator_mobile_navigation/: CMakeLists.txt  package.xml
manipulator_moveit_config/: .setup_assistant  package.xml
mcu_code/: arm_controller.ino  hand_controller.ino  hand_sensor_pub.ino  mobile_controller.c
mk_ik_demo/: CMakeLists.txt  package.xml
mk_ik_demo/src/: mk copy.cpp  mk.cpp  pub.cpp  test.cpp  test_cartesian.cpp  test_cartesian_mobile.cpp  test_low_control.cpp  test_low_control_mobile.cpp  test_original.cpp  test_succes_0123.cpp  test_succes_0123_ser.cpp  test_traj.cpp  test_wdls.cpp  test_wdls_v2.cpp
mk_pkg/: CMakeLists.txt  package.xml
mk_pkg/src/: 123123.py  LMA_test.py  NR_weight_test.py  angle_sensor_pub.py  ebium.py  forward_camera.py  gui.py  hand_jointstate.py  hand_jointstate_gazebo.py  imu_reset_node.py  kdl_ik_solver.py  kdl_ik_solver_fake.py  pp_object_pub.py  publish_posestamped.py  servo_test.py  switch_node.py  test_pick_pub.py  test_publish_target_pose.py  u2d2_3_25.py  u2d2_6_25.py  wdls_kalman_test.py  wdls_test.py  wrist_detect copy.py  wrist_detect.py
slam_file/: my_robot_localization.launch  my_robot_localization.lua
(+16 files in other folders)
